--- a/download.html
+++ b/download.html
@@ -24,9 +24,14 @@
 
 <h3>Legacy Version</h3>
 <ul>
-<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_02.msi">doc_krypto_v01_00_02.msi </a></li>
+<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_02.msi">doc_krypto_v01_00_02.msi</a></li>
 <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_01.msi">doc_krypto_v01_00_01.msi</a></li>
 <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v00_04_01.msi">doc_krypto_v00_04_01.msi</a></li>
+</ul>
+    
+<h3>Templates</h3>
+<ul>
+<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/templates/example_template.zip">example_template.zip</a></li>
 </ul>
 
 <p><em>Thank you for using DocKrypto.</em></p>
