--- a/download.html
+++ b/download.html
@@ -12,21 +12,9 @@
 </head>
 <body>
 <h1>Download DocKrypto</h1>
-<h3>Stable Version</h3>
-<ul>
-<li>Coming soon...</li>
-</ul>
-
-<h3>Beta Version</h3>
+<h3>Latest Version</h3>
 <ul>
 <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_03_beta.msi">doc_krypto_v01_00_03_beta.msi</a></li>
-</ul>
-
-<h3>Legacy Version</h3>
-<ul>
-<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_02.msi">doc_krypto_v01_00_02.msi</a></li>
-<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_01.msi">doc_krypto_v01_00_01.msi</a></li>
-<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v00_04_01.msi">doc_krypto_v00_04_01.msi</a></li>
 </ul>
     
 <h3>Templates</h3>
