upload new version with decoration

--- a/download.html
+++ b/download.html
@@ -1,27 +1,88 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Download DocKrypto</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
-</head>
-<body>
-<h1>Download DocKrypto</h1>
-<h3>Latest Version</h3>
-<ul>
-<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_03_beta.msi">doc_krypto_v01_00_03_beta.msi</a></li>
-</ul>
-    
-<h3>Templates</h3>
-<ul>
-<li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/templates/example_template.zip">example_template.zip</a></li>
-</ul>
+<html lang="en">
 
-<p><em>Thank you for using DocKrypto.</em></p>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>DocKrypto</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/simple-sidebar.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        DocKrypto
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Download</a>
+                </li>
+                <li>
+                    <a href="#">Documentation</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="jumbotron">
+                    <img src="image\DocKrypto.png" class="img-fluid max-width:100%" alt="Responsive image" width="400">
+                    <br>
+                    <br>
+                    <br>
+                    <h3>Latest Version</h3>
+                    <ul>
+                    <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_00_03_beta.msi">doc_krypto_v01_00_03_beta.msi</a></li>
+                    </ul>
+                        
+                    <h3>Templates</h3>
+                    <ul>
+                    <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/templates/example_template.zip">example_template.zip</a></li>
+                    </ul>
+                    <br>
+                    <p><em>Thank you for using DocKrypto. For further information and support, please contact <a href="support@inpiasia.com">support@inpiasia.com</a></em></p>
+                </div>
+                <!--<a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Toggle Menu</a>-->
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Menu Toggle Script -->
+    <script>
+    $("#wrapper").toggleClass("toggled");
+    /*
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+    */
+    </script>
+
 </body>
+
 </html>
