disabled email link

--- a/download.html
+++ b/download.html
@@ -58,7 +58,7 @@
                     <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/templates/example_template.zip">example_template.zip</a></li>
                     </ul>
                     <br>
-                    <p><em>Thank you for using DocKrypto. For further information and support, please contact <a href="support@inpiasia.com">support@inpiasia.com</a></em></p>
+                    <p><em>Thank you for using DocKrypto. For further information and support, please contact <a href="support@inpiasia.com" class="disabled">support@inpiasia.com</a></em></p>
                 </div>
                 <!--<a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Toggle Menu</a>-->
             </div>
