--- a/download.html
+++ b/download.html
@@ -55,7 +55,7 @@
                         
                     <h3>Templates</h3>
                     <ul>
-                    <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/templates/example_template.zip">example_template.zip</a></li>
+                    <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/templates/example_template.zip">example_template.zi</a></li>
                     </ul>
                     <br>
                     <p><em>Thank you for using DocKrypto. For further information and support, please contact <a href="support@inpiasia.com" class="disabled">support@inpiasia.com</a></em></p>
