--- a/download.html
+++ b/download.html
@@ -54,7 +54,7 @@
                     <br>
                     <div class="tab-content">
                         <div class="tab-pane in active" id="s-list">
-                            <h3>Latest Version</h3>
+                            <h3>Latest Versio</h3>
                             <ul>
                             <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/doc_krypto_v01_01_01.msi">doc_krypto_v01_01_01.msi</a></li>
                             </ul>
