--- a/download.html
+++ b/download.html
@@ -56,7 +56,7 @@
                         <div class="tab-pane in active" id="s-list">
                             <h3>Latest Version</h3>
                             <ul>
-                            <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/DocKrypto_v01_02_01_x64_WIN10.zip</a></li>
+                            <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/DocKrypto_v01_02_01_x64_WIN10.zip">DocKrypto_v01_02_01_x64_WIN10.zip</a></li>
                             </ul>
                                 
                             <h3>Templates</h3>
