--- a/download.html
+++ b/download.html
@@ -56,7 +56,7 @@
                         <div class="tab-pane in active" id="s-list">
                             <h3>Latest Version</h3>
                             <ul>
-                            <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/DocKrypto_v01_03_01_x86.zip">DocKrypto_v01_03_01_x86.zip</a></li>
+                            <li><a href="https://s3-ap-southeast-2.amazonaws.com/doc-krypto/reader-installer/DocKrypto_v01_04_01_x86.msi">DocKrypto_v01_04_01_x86.msi</a></li>
                             </ul>
                                 
                             <h3>Templates</h3>
